components/policies/best-practices/ban-sa-automount-sa-token/test/serviceaccount-bad.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: badserviceaccount01
automountServiceAccountToken: true
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: badserviceaccount02
---
