components/policies/best-practices/ban-sa-automount-sa-token/test/serviceaccount-good.yaml
# SPDX-FileCopyrightText: The vap-collection Authors
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: v1
kind: ServiceAccount
metadata:
  name: goodserviceaccount01
automountServiceAccountToken: false
---
